PIG-3915: MapReduce queries in Pigmix outputs different results than Pig's
git-svn-id: https://svn.apache.org/repos/asf/pig/trunk@1598203 13f79535-47bb-0310-9956-ffa450edef68